--- a/content/post/2019-08-28-lorem-ipsum.Rmd
+++ b/content/post/2019-08-28-lorem-ipsum.Rmd
@@ -19,5 +19,6 @@ ggplot(mtcars,
        aes(x = hp,
            y = mpg,
            col = as.character(cyl))) +
-  geom_point(aes(size = 2))
+  geom_point(aes(size = 2)) + 
+  labs(title = "ggplot graf")
 ```
